@@ -1,12 +1,19 @@
 
 /* makecsd utility - written by Istvan Varga, Mar 2003 */
+/* updated jpff Feb 2011 */
+
+#define VERSION "2.0"
 
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
 #include <errno.h>
+#include <time.h>
+#define MAXLICENCE (7)
 
 static  char    *orcname = NULL, *sconame = NULL, *optname = NULL;
+static  char    *midiname = NULL, *scorebin = NULL, *licence = NULL;
+static  int     licencetype = -1;
 
 static  int     nr_infiles = 0;
 static  int     max_infiles = 0;
@@ -21,7 +28,7 @@ static  int     tabstop_size = 0;
 /* convert 6 bits of input and write to output file */
 extern  int     encode_byte(FILE*, FILE*);
 /* convert an entire input file */
-extern  void    encode_file(char*, FILE*);
+extern  void    encode_file(char*, FILE*, int);
 /* line width */
 extern  int     maxlinepos;
 
@@ -209,6 +216,40 @@ int main(int argc, char **argv)
         i++;
         optname = argv[i];
       }
+      else if (!strcmp(argv[i], "-m")) {        /* options file name */
+        if (!(--j)) {
+          fprintf(stderr, "makecsd: missing option for -m\n");
+          exit(-1);
+        }
+        i++;
+        midiname = argv[i];
+      }
+      else if (!strcmp(argv[i], "-b")) {        /* options file name */
+        if (!(--j)) {
+          fprintf(stderr, "makecsd: missing option for -b\n");
+          exit(-1);
+        }
+        i++;
+        scorebin = argv[i];
+      }
+      else if (!strcmp(argv[i], "-L")) {        /* options file name */
+        if (!(--j)) {
+          fprintf(stderr, "makecsd: missing option for -b\n");
+          exit(-1);
+        }
+        i++;
+        licence = argv[i];
+        licencetype = 99;
+      }
+      else if (!strcmp(argv[i], "-l")) {        /* options file name */
+        if (!(--j)) {
+          fprintf(stderr, "makecsd: missing option for -b\n");
+          exit(-1);
+        }
+        i++;
+        licencetype = atoi(argv[i]);
+        if (licencetype>MAXLICENCE || licencetype<0) licencetype = -1;
+      }
       else {                                    /* input file name */
         if (*(argv[i]) == '-') {
           fprintf(stderr, "makecsd: invalid option: %s\n", argv[i]);
@@ -247,6 +288,17 @@ int main(int argc, char **argv)
               "    -f <fname>  read CSD options from file 'fname'\n");
       fprintf(stderr,
               "    -o <fname>  output file name (default: stdout)\n");
+      /* **** NEW OPTIONS **** */
+      //      fprintf(stderr,
+      //              "    -v[ba] x.y  use version (before/after) x.y\n");
+      fprintf(stderr,
+              "    -l int      licence type (0-1)\n");
+      fprintf(stderr,
+              "    -L fname    licence file\n");
+      fprintf(stderr,
+              "    -b <pname>  program to process score'\n");
+      fprintf(stderr,
+              "    -m <fname>  MIDI file name\n");
       exit(-1);
     }
     /* open output file */
@@ -262,10 +314,9 @@ int main(int argc, char **argv)
       outfile = stdout;
     /* create CSD file */
     fprintf(outfile, "<CsoundSynthesizer>\n");
-    fprintf(outfile, "; this CSD file was generated with makecsd v1.1\n");
-    fprintf(outfile, "; (written by Istvan Varga, Mar 2003)\n");
+    fprintf(outfile, ";;; this CSD file generated by makecsd v" VERSION "\n");
     fprintf(outfile, "<CsOptions>\n");
-    fprintf(outfile, "; set command line options here\n");
+    fprintf(outfile, ";;; set command line options here\n");
     /* CSD options */
     for (i = 0; i < nr_infiles; i++) {
       char *s = infile_names[i], *s0;
@@ -294,6 +345,57 @@ int main(int argc, char **argv)
       fprintf(outfile, "\n");   /* put blank line if there are no options */
     }
     fprintf(outfile, "</CsOptions>\n");
+    if (licencetype == 99) {    /* Licence file */
+      fprintf(outfile, "<CsLicence>\n");
+      convert_txt_file(licence, outfile);
+      fprintf(outfile, "</CsLicence>\n");
+    }
+    else if (licencetype < MAXLICENCE) { /* precanned licence */
+      char buff[32];
+      time_t tt = time(NULL);
+      strftime(buff, 32, "<CsLicence>\nCopyright %Y: ", gmtime(&tt));
+      fprintf(outfile, buff);
+      switch (licencetype) {
+      default:
+      case 0:
+        fprintf(outfile, "All Rights Reserved\n");
+        break;
+      case 1:
+        fprintf(outfile, "Creative Commons "
+                "Attribution-NonCommercial-NoDerivatives\n"
+                "CC BY-NC-ND\n");
+        break;
+      case 2:
+        fprintf(outfile, "Creative Commons "
+                "Attribution-NonCommercial-ShareAlike\n"
+                "CC BY-NC-SA\n");
+        break;
+      case 3:
+        fprintf(outfile, "Creative Commons "
+                "Attribution-NonCommercial\n"
+                "CC BY-NC\n");
+         break;
+     case 4:
+        fprintf(outfile, "Creative Commons "
+                "Attribution-NoDerivatives\n"
+                "CC BY-ND\n");
+        break;
+      case 5:
+        fprintf(outfile, "Creative Commons "
+                "Attribution-ShareAlike\n"
+                "CC BY-SA\n");
+        break;
+      case 6:
+        fprintf(outfile, "Creative Commons "
+                "Attribution\n"
+                "CC BY \n");
+        break;
+      case 7:
+        fprintf(outfile, "Licenced under BSD\n");
+        break;
+      }
+      fprintf(outfile, "</CsLicence>\n");
+    }
     /* orchestra */
     if (orcname != NULL) {
       fprintf(outfile, "<CsInstruments>\n");
@@ -305,16 +407,24 @@ int main(int argc, char **argv)
     }
     /* score */
     if (sconame != NULL) {
-      fprintf(outfile, "<CsScore>\n");
+      if (scorebin)
+        fprintf(outfile, "<CsScore bin=\"%s\">\n", scorebin);
+      else
+        fprintf(outfile, "<CsScore>\n");
       convert_txt_file(sconame, outfile);
       fprintf(outfile, "</CsScore>\n");
     }
     else {
       fprintf(stderr, "makecsd: warning: no score file\n");
     }
+    if (midiname != NULL) {
+      fprintf(outfile, "<CsMidifileB>\n");
+      encode_file(midiname, outfile, 1);
+      fprintf(outfile, "</CsMidifileB>\n");
+    }
     /* Base64 encode any remaining input files */
     for (i = 0; i < nr_infiles; i++)
-      encode_file(infile_names[i], outfile);
+      encode_file(infile_names[i], outfile, 0);
     /* end of CSD file */
     fprintf(outfile, "</CsoundSynthesizer>\n\n");
     /* close output file */
